horizontal scroll issue fix

--- a/packages/cogo-academy/page-components/CreateModule/components/CreateNewTest/components/ReviewAndCriteria/components/QuestionsAndDistribution/styles.module.css
+++ b/packages/cogo-academy/page-components/CreateModule/components/CreateNewTest/components/ReviewAndCriteria/components/QuestionsAndDistribution/styles.module.css
@@ -1,81 +1,96 @@
 .distribution {
-	display: flex;
-	gap: 4px;
-	align-items: center;
-	margin-right: -95px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 4px;
+  align-items: center;
 }
 
 .input {
-	width: 100px;
+  width: 100px;
 }
 
 .table_container {
-	padding: unset !important;
-	margin-top: 24px;
-	margin-bottom: 2px;
+  padding: unset !important;
+  margin-top: 24px;
+  margin-bottom: 2px;
 
-	:global {
-		.ui_table_head_row {
-			background-color: rgb(255 255 255 / 40%);
+  :global {
+    .ui_table_head_row {
+      background-color: rgb(255 255 255 / 40%);
 
-			.ui_table_head_cell {
-				padding-top: 18px;
-				padding-bottom: 10px;
-				margin-bottom: 10px;
-				font-size: 14px;
-				color: black;
-				border-bottom: 1px solid #f8f2e7;
-			}
-		}
+      .ui_table_head_cell {
+        padding-top: 18px;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        font-size: 14px;
+        color: black;
+        border-bottom: 1px solid #f8f2e7;
+      }
+    }
 
-		.ui_table_body_container {
-			background-color: rgb(255 255 255 / 40%);
+    .ui_table_body_container {
+      background-color: rgb(255 255 255 / 40%);
 
-			.ui_table_body_row {
-				border-radius: 8px;
+      .ui_table_body_row {
+        border-radius: 8px;
 
-				.ui_table_body_row {
-					border-radius: 8px;
+        .ui_table_body_row {
+          border-radius: 8px;
 
-					.ui_table_body_cell {
-						padding-block: 10px;
-						font-size: 12px;
-						color: #221f20;
-					}
-				}
-			}
-		}
-	}
+          .ui_table_body_cell {
+            padding-block: 10px;
+            font-size: 12px;
+            color: #221f20;
+          }
+        }
+      }
+    }
+  }
 }
 
 .error_msg {
-	margin: 0;
-	font-size: 12px;
-	font-weight: 500;
-	color: #cb6464;
+  margin: 0;
+  font-size: 12px;
+  font-weight: 500;
+  color: #cb6464;
 }
 
-.distribution_heading {
-	margin-right: -95px;
+.content {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.subcontent {
+  display: flex;
+  flex-direction: column;
+}
+
+.matter {
+  font-weight: 400;
 }
 
 .distribution_heading h6 {
-	width: fit-content;
-	margin-top: 0;
-	font-size: 14px;
-	font-style: normal;
-	font-weight: 400;
-	color: #4f4f4f;
+  width: fit-content;
+  margin-top: 0;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  color: #4f4f4f;
 }
 
 .total_questions {
-	display: flex;
-	justify-content: flex-end;
-	margin-right: 10px;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 10px;
 }
 
 .total_heading {
-	margin-right: 18px;
-	font-weight: 600;
-	text-align: right;
+  margin-right: 10px;
+  font-weight: 600;
+  text-align: right;
+}
+
+.total_heading_two {
+  font-weight: 600;
+  text-align: right;
 }
